non-ambiguous.
- invalid options sent to 'cascade' string will raise an exception [ticket:406]
- fixed bug in mapper refresh/expire whereby eager loaders didnt properly re-populate
item lists [ticket:407]
- order of constraint creation puts primary key first before all other constraints;
required for firebird, not a bad idea for others [ticket:408]

0.3.3
- string-based FROM clauses fixed, i.e. select(..., from_obj=["sometext"])
- fixes to passive_deletes flag, lazy=None (noload) flag
- added example/docs for dealing with large collections
- added object_session() method to sqlalchemy namespace
- fixed QueuePool bug whereby its better able to reconnect to a database
that was not reachable (thanks to Sébastien Lelong), also fixed dispose()
method
- patch that makes MySQL rowcount work correctly! [ticket:396]
- fix to MySQL catch of 2006/2014 errors to properly re-raise OperationalError
exception

0.3.2
- major connection pool bug fixed.  fixes MySQL out of sync
errors, will also prevent transactions getting rolled back
accidentally in all DBs [ticket:387]
- major speed enhancements vs. 0.3.1, to bring speed
back to 0.2.8 levels 
  - made conditional dozens of debug log calls that were 
  time-intensive to generate log messages
  - fixed bug in cascade rules whereby the entire object graph
  could be unnecessarily cascaded on the save/update cascade
  - various speedups in attributes module
- identity map in Session is by default *no longer weak referencing*.
to have it be weak referencing, use create_session(weak_identity_map=True)
fixes [ticket:388]
- MySQL detects errors 2006 (server has gone away) and 2014
(commands out of sync) and invalidates the connection on which it occured.
- MySQL bool type fix: [ticket:307]
- postgres reflection fixes: [ticket:349] [ticket:382]
- added keywords for EXCEPT, INTERSECT, EXCEPT ALL, INTERSECT ALL
[ticket:247]
- assign_mapper in assignmapper extension returns the created mapper
[changeset:2110]